# leaderboard-playground

./: CLAUDE.md  Cargo.toml  README.md  cdm.json  index.html  package-lock.json  package.json  quests.json  setup.sh  template.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/skills/: swap-the-backend.md  swap-the-game.md
contracts/leaderboard/: Cargo.toml  lib.rs
docs/: modding.md
src/: App.css  App.tsx
src/games/: types.ts
src/games/flappy/: FlappyGame.tsx  flappy.css
src/scoreboard/: Leaderboard.tsx  api.ts  contract-impl.ts  local-impl.ts
