[package]
name = "leaderboard"
version.workspace = true
edition.workspace = true
description = "Leaderboard contract — append-only log of (player_name, score) submissions."

[lib]
path = "lib.rs"

[[bin]]
name = "leaderboard"
path = "lib.rs"

[dependencies]
cdm = { workspace = true }
pvm_contract = { workspace = true }
polkavm-derive = { workspace = true }
parity-scale-codec = { workspace = true }
picoalloc = { workspace = true }
